--- a/Razor01/packages.config
+++ b/Razor01/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DynamicJson" version="1.2.0.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
 </packages>
